Added authentication using keycloak.
