# src/measurements-api/Measurements.Api.Domain/Entities/Sensor.cs
@@ -4,6 +4,5 @@
 
 public class Sensor : BaseEntity
 {
-    public string Identifier { get; set; }
     public string Description { get; set; }
 }
