# src/measurements-api/Measurements.Api/Controllers/MeasurementsController.cs
@@ -1,25 +1,24 @@
-﻿using AutoMapper;
-using Measurements.Api.Application.Measurements.Commands;
+﻿using Measurements.Api.Application.Measurements.Commands;
 using Measurements.Api.Application.Measurements.Queries;
 using MediatR;
+using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using OpenApi.Measurements.Api;
 
 namespace Measurements.Api.Controllers;
 
-public class MeasurementsController : ControllerBase, IMeasurementsController
+public class MeasurementsController : MeasurementsControllerBase
 {
-    private readonly IMapper _mapper;
     private readonly IMediator _mediator;
 
-    public MeasurementsController(IMapper mapper, IMediator mediator)
+    public MeasurementsController(IMediator mediator)
     {
-        _mapper = mapper;
         _mediator = mediator;
     }
 
-    public async Task<ActionResult<MeasurementsDataResponse>> MeasurementsAsync(DateTime? startTime, DateTime? endTime, string source, string orderBy, int limit, int offset,
-        CancellationToken cancellationToken = default(CancellationToken))
+    [AllowAnonymous]
+    public override async Task<ActionResult<MeasurementsDataResponse>> Measurements(DateTime? startTime, DateTime? endTime, string source, string orderBy = "time:asc", int? limit = 100,
+        int? offset = 0, CancellationToken cancellationToken = default(CancellationToken))
     {
         var query = new SearchMeasurementsQuery
         {
@@ -27,14 +26,14 @@ public class MeasurementsController : ControllerBase, IMeasurementsController
             EndTime = endTime,
             Source = source,
             OrderBy = orderBy,
-            Limit = limit,
-            Offset = offset
+            Limit = limit ?? 100,
+            Offset = offset ?? 0
         };
 
         return await _mediator.Send(query, cancellationToken);
     }
 
-    public async Task<IActionResult> BatchInsertAsync(IEnumerable<Measurement> body, CancellationToken cancellationToken = default)
+    public override async Task<IActionResult> BatchInsert(IEnumerable<Measurement> body, CancellationToken cancellationToken = default(CancellationToken))
     {
         var command = new InsertMeasurementsCommand(body);
         await _mediator.Send(command, cancellationToken);
